# Tomado

./: .gitignore  Makefile  README.md  create_dmg.txt  pyproject.toml  requirements.txt  setup.py  stats_example.json  tomado.py  tomado.spec  utilities.py
docs/superpowers/specs/: 2026-05-07-project-hours-tracking-design.md
testfiles/: stats.json
