[project]
name = "tomado"
version = "0.3.1"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "pyobjc-core==12.1",
    "pyobjc-framework-Cocoa==12.1",
    "rumps==0.4.0",
]

[tool.uv]
python-preference = "only-system"

[dependency-groups]
dev = [
    "poethepoet",
    "py2app",
    "setuptools<80",
]

[tool.poe.tasks]
app    = "python setup.py py2app"
alias  = "python setup.py py2app -A"
run    = "./dist/Tomado.app/Contents/MacOS/Tomado"
clean  = {shell = "rm -rf build dist *.dmg"}
dmg    = {shell = """
    create-dmg \
    --volname "Tomado Installer" \
    --volicon "icons/tomado.icns" \
    --window-pos 100 60 \
    --window-size 430 270 \
    --icon-size 100 \
    --icon "Tomado.app" 100 100 \
    --hide-extension "Tomado.app" \
    --app-drop-link 300 100 \
    "Tomado-Installer.dmg" \
    "dist"
"""}